--- a/navbar.html
+++ b/navbar.html
@@ -1,10 +1,7 @@
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
   <div class="container">
-    <!-- <div class="m-2"><img src="https://www.prologis.com/themes/custom/prologis/favicons/android-chrome-256x256.png" ></div> -->
-    
-    <!-- <a class="navbar-brand js-scroll-trigger" href="http://localhost/sotl6/index.php">SOTL6</a> -->
-    <a class="navbar-brand js-scroll-trigger logo-size" href="http://localhost/sotl6/index.php"><img class="mx-auto"  style="width: 30%; height: auto;  filter: contrast(2); " src="img/logos/logo2.png" alt=""></a>
+    <a class="navbar-brand js-scroll-trigger logo-size" href="http://localhost/sotl6/index.php"><img class="mx-auto"  style="width: 20%; height: auto;  filter: contrast(2); " src="img/LOGO.png" alt=""></a>
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
       data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
       aria-label="Toggle navigation">
@@ -17,7 +14,7 @@
           <a class="nav-link js-scroll-trigger" href="index.php">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="registration.php">Registration</a>
+          <a class="nav-link js-scroll-trigger" href="registration_detail.php">Registration</a>
         </li>
         <!-- <li class="nav-item dropdown">
           <a class="dropdown-toggle nav-link " data-toggle="dropdown" href="index.php#program">Program<span class="caret"></span></a>
