--- a/navbar.html
+++ b/navbar.html
@@ -14,7 +14,7 @@
           <a class="nav-link js-scroll-trigger" href="index.php">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="registration_detail.php">Registration</a>
+          <a class="nav-link js-scroll-trigger" href="registration.php">Registration</a>
         </li>
         <!-- <li class="nav-item dropdown">
           <a class="dropdown-toggle nav-link " data-toggle="dropdown" href="index.php#program">Program<span class="caret"></span></a>
@@ -34,7 +34,7 @@
         </li>
        
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="index.php#contact">Venue</a>
+          <a class="nav-link js-scroll-trigger" href="อพ">Venue</a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="contact.php">Contact</a>
