--- a/footer.html
+++ b/footer.html
@@ -3,7 +3,7 @@
 <footer class="footer">
   <div class="container">
     <div class="row align-items-center">
-      <div class="col-md-4">
+      <!-- <div class="col-md-4">
         <h5>ร่วมจัดโดย</h5>
         <div class="row mb-2">
           <div class="col-md-3 col-sm-3"><img src="img/cohost/cohost-mu.png" class="cohost-footer align-items-baseline" data-toggle="tooltip" data-placement="top" title="สถาบันนัตกรรมการเรียนรู้ ม.มหิดล"> </div>
@@ -16,8 +16,8 @@
           <div class="col-md-3 col-sm-3"><img src="img/cohost/cohost-KMITL.png" class="cohost-footer align-items-baseline" data-toggle="tooltip" data-placement="top" title="มหาวิทยาลัยเทคโนโลยีพระจอมเกล้าธนบุรี"></div>
           <div class="col-md-3 col-sm-3"><img src="img/cohost/cohost-kmutt.png" class="cohost-footer align-items-baseline" data-toggle="tooltip" data-placement="top" title="สถาบันเทคโนโลยีพระจอมเกล้าเจ้าคุณทหารลาดกระบัง"></div>
         </div>
-      </div>
-      <div class="col-md-4">
+      </div> -->
+      <!-- <div class="col-md-6">
         <ul class="list-inline social-buttons">
           <li class="list-inline-item">
             <a href="https://www.facebook.com/Sotl6-102327021278473/" target="_blank">
@@ -35,43 +35,26 @@
             </a>
           </li>
         </ul>
-      </div>
-      <div class="col-md-4 footer-align">
+      </div> -->
+      <div class="col-md-12 ">
         <h5>ติดต่อ</h5>
         <p><i class="fas fa-map-marker-alt"></i> &nbsp; สถาบันนวัตกรรมการเรียนรู้
-          </br> เลขที่ 999 ถ.พุทธมณฑลสาย
-          4 ต.ศาลายา </br>อ. พุทธมณฑล
+           เลขที่ 999 ถ.พุทธมณฑลสาย
+          4 ต.ศาลายา อ. พุทธมณฑล
           จ.นครปฐม 73170
           </br><i class="fas fa-phone-square-alt"></i>&nbsp; โทรศัพท์ : 0-2441-9729
-          </br><i class="fas fa-mobile-alt"></i>&nbsp; มือถือ : 08-6320-5925
+          <i class="fas fa-mobile-alt"></i>&nbsp; มือถือ : 08-6320-5925
           </br><i class="fas fa-fax"></i>&nbsp; FAX : 0-2441-0479
           </br><i class="fas fa-envelope"></i> &nbsp;sotl6.2020@gmail.com
-
         </p>
-        <!-- <ul class="list-inline quicklinks">
-          <li class="list-inline-item">
-            <a href="#">Privacy Policy</a>
-          </li>
-          <li class="list-inline-item">
-            <a href="#">Terms of Use</a>
-          </li>
-        </ul> -->
       </div>
     </div>
-
     <div class="row align-items-center">
       <div class="col-md-12 mt-4">
-        <span class="copyright">Copyright &copy; SoTL6 2019</span>
+        <span class="copyright">Copyright &copy; The 14th Thai Humanities Research Forum 2020</span>
       </div>
     </div>
   </div>
-
-  <!-- tooltip -->
-  <script>
-    $(document).ready(function(){
-      $('[data-toggle="tooltip"]').tooltip();   
-    });
-  </script>
 
   <!-- FB chat -->
   <!-- Load Facebook SDK for JavaScript -->
