--- a/navbar.html
+++ b/navbar.html
@@ -27,7 +27,7 @@
           <a class="nav-link js-scroll-trigger" href="program.php">Program</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="workshop.php">Workshop</a>
+            <a class="nav-link js-scroll-trigger" href="workshop.php">Session</a>
           </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="keynote.php">Keynote</a>
