--- a/navbar.html
+++ b/navbar.html
@@ -34,7 +34,7 @@
         </li>
        
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="อพ">Venue</a>
+          <a class="nav-link js-scroll-trigger" href="venue.php">Venue</a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="contact.php">Contact</a>
