--- a/navbar.html
+++ b/navbar.html
@@ -1,7 +1,7 @@
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
   <div class="container">
-    <a class="navbar-brand js-scroll-trigger logo-size" href="http://localhost/sotl6/index.php"><img class="mx-auto"  style="width: 20%; height: auto;  filter: contrast(2); " src="img/LOGO.png" alt=""></a>
+    <!-- <a href="index.php"><img class="mx-auto"  style="width: 20%; height: auto;  filter: contrast(2); " src="img/LOGO.png" alt=""></a> -->
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
       data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
       aria-label="Toggle navigation">
@@ -9,36 +9,37 @@
       <i class="fas fa-bars"></i>
     </button>
     <div class="collapse navbar-collapse" id="navbarResponsive">
-      <ul class="navbar-nav text-uppercase ml-auto">
+      <ul class="navbar-nav text-uppercase mx-auto">
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="index.php">Home</a>
+          <a class="nav-link js-scroll-trigger" href="index.php">หน้าหลัก</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="registration.php">Registration</a>
+          <a class="nav-link js-scroll-trigger" href="registration.php">ลงทะเบียน</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="publications.php">บทความวิชาการ</a>
         </li>
         <!-- <li class="nav-item dropdown">
-          <a class="dropdown-toggle nav-link " data-toggle="dropdown" href="index.php#program">Program<span class="caret"></span></a>
+          <a class="dropdown-toggle nav-link " data-toggle="dropdown" href="index.php#program">เกี่ยวกับงาน<span class="caret"></span></a>
            <ul class="dropdown-menu">
-            <li><a href="#portfolio">Sessions</a></li>
-            <li><a href="#">schedule</a></li>
+            <li><a href="#portfolio">กำหนดการ</a></li>
+            <li><a href="#">ผู้บรรยาย</a></li>
           </ul>
         </li> -->
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="program.php">Program</a>
+          <a class="nav-link js-scroll-trigger" href="program.php">กำหนดการ</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="workshop.php">Session</a>
-          </li>
-        <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="keynote.php">Keynote</a>
+          <a class="nav-link js-scroll-trigger" href="keynote.php">ผู้บรรยาย</a>
         </li>
        
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="venue.php">Venue</a>
+          <a class="nav-link js-scroll-trigger" href="venue.php">สถานที่จัดงาน</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="contact.php">Contact</a>
+          <a class="nav-link js-scroll-trigger" href="contact.php">ติดต่อ</a>
         </li>
+        
       </ul>
     </div>
   </div>
