--- a/navbar.html
+++ b/navbar.html
@@ -2,6 +2,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
   <div class="container">
     <!-- <a href="index.php"><img class="mx-auto"  style="width: 20%; height: auto;  filter: contrast(2); " src="img/LOGO.png" alt=""></a> -->
+    <!-- <img class="m-2" src="img/LOGO.png" style="width: 5%; height: auto;">  -->
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
       data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
       aria-label="Toggle navigation">
@@ -19,15 +20,12 @@
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="publications.php">บทความวิชาการ</a>
         </li>
-        <!-- <li class="nav-item dropdown">
-          <a class="dropdown-toggle nav-link " data-toggle="dropdown" href="index.php#program">เกี่ยวกับงาน<span class="caret"></span></a>
+        <li class="nav-item dropdown">
+          <a class="dropdown-toggle nav-link " data-toggle="dropdown" href="#">กำหนดการ<span class="caret"></span></a>
            <ul class="dropdown-menu">
-            <li><a href="#portfolio">กำหนดการ</a></li>
-            <li><a href="#">ผู้บรรยาย</a></li>
+            <li><a href="program.php">งานมหกรรมเปิดโลกสังคมศาสตร์และมนุษยศาสตร์</a></li>
+            <li><a href="program2.php">งานเวทีวิจัยมนุษยศาสตร์ไทย ครั้งที่ 14</a></li>
           </ul>
-        </li> -->
-        <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="program.php">กำหนดการ</a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="keynote.php">ผู้บรรยาย</a>
