--- a/eng/navbar_eng.html
+++ b/eng/navbar_eng.html
@@ -12,42 +12,43 @@
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav text-uppercase mx-auto">
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="index.php">หน้าหลัก</a>
+          <a class="nav-link js-scroll-trigger text-uppercase" href="index.php">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="registration.php">ลงทะเบียน</a>
+          <a class="nav-link js-scroll-trigger text-uppercase" href="registration.php">Registration</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="publications.php">บทความวิชาการ</a>
+          <a class="nav-link js-scroll-trigger text-uppercase" href="publications.php">Publication</a>
         </li>
         <li class="nav-item dropdown">
-          <a class="dropdown-toggle nav-link " data-toggle="dropdown" href="#">กำหนดการ<span class="caret"></span></a>
+          <a class="dropdown-toggle nav-link text-uppercase" data-toggle="dropdown" href="#">schedule<span class="caret"></span></a>
            <ul class="dropdown-menu">
             <li><a href="program.php">งานมหกรรมเปิดโลกสังคมศาสตร์และมนุษยศาสตร์</a></li>
             <li><a href="program2.php">งานเวทีวิจัยมนุษยศาสตร์ไทย ครั้งที่ 14</a></li>
           </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="keynote.php">ผู้บรรยาย</a>
+          <a class="nav-link js-scroll-trigger text-uppercase" href="keynote.php">keynote</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="venue.php">สถานที่จัดงาน</a>
+          <a class="nav-link js-scroll-trigger text-uppercase" href="venue.php">venue</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="gallery.php">แกลลอรี่</a>
+          <a class="nav-link js-scroll-trigger text-uppercase" href="gallery.php">Gallrey</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="contact.php">ติดต่อ</a>
+          <a class="nav-link js-scroll-trigger text-uppercase" href="contact.php">contact</a>
         </li>
         <li class="nav-item" >
           <a class="nav-link js-scroll-trigger"  href="https://www.facebook.com/เวทีวิจัยมนุษยศาสตร์ไทยครั้งที่-14The-14th-Thai-Humanities-Research-Forum-102661601178875/?__tn__=%2Cd%2CP-R&eid=ARBv7SQxDzz0tpQHMX4rmZVAsE082pgoFXLD32iRnF46Po79b8FKUj440tYgEan0yxsQs_Ca_dUoqaTF" target="_blank"><i class="fab fa-facebook-square fa-2x"></i></a>
         </li>
         <li class="nav-item ">
-          <a class="nav-link js-scroll-trigger" href="#">th</a>
+          <a class="nav-link js-scroll-trigger " href="../">th</a>
         </li>
         <li class="nav-item ">
-          <a class="nav-link js-scroll-trigger" href="eng/">en</a>
+          <a class="nav-link js-scroll-trigger " href="#">en</a>
         </li>
+
       </ul>
     </div>
   </div>
