--- a/eng/navbar_eng.html
+++ b/eng/navbar_eng.html
@@ -24,7 +24,7 @@
           <a class="dropdown-toggle nav-link text-uppercase" data-toggle="dropdown" href="#">schedule<span class="caret"></span></a>
            <ul class="dropdown-menu">
             <li><a href="program.php">งานมหกรรมเปิดโลกสังคมศาสตร์และมนุษยศาสตร์</a></li>
-            <li><a href="program2.php">งานเวทีวิจัยมนุษยศาสตร์ไทย ครั้งที่ 14</a></li>
+            <li><a href="program2.php">The 14th Thai Humanities Research Forum</a></li>
           </ul>
         </li>
         <li class="nav-item">
