--- a/navbar.html
+++ b/navbar.html
@@ -14,28 +14,34 @@
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="index.php">หน้าหลัก</a>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="registration.php">ลงทะเบียน</a>
+        </li> -->
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="registration_update.php"><red_nav>ลงทะเบียน</red_nav></a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="publications.php">บทความวิชาการ</a>
         </li>
-        <li class="nav-item dropdown">
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="program2.php">กำหนดการ</a>
+        </li> 
+        <!-- <li class="nav-item dropdown">
           <a class="dropdown-toggle nav-link " data-toggle="dropdown" href="#">กำหนดการ<span class="caret"></span></a>
            <ul class="dropdown-menu">
-            <li><a href="program.php">งานมหกรรมเปิดโลกสังคมศาสตร์และมนุษยศาสตร์</a></li>
+            <li><a href="program.php">งานมหกรรมเปิดโลกสังคมศาสตร์และมนุษยศาสตร์</a></li> 
             <li><a href="program2.php">งานเวทีวิจัยมนุษยศาสตร์ไทย ครั้งที่ 14</a></li>
           </ul>
-        </li>
-        <li class="nav-item">
+        </li> -->
+        <!-- <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="keynote.php">ผู้บรรยาย</a>
-        </li>
+        </li> -->
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="venue.php">สถานที่จัดงาน</a>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="gallery.php">แกลลอรี่</a>
-        </li>
+        </li> -->
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="contact.php">ติดต่อ</a>
         </li>
