--- a/eng/navbar_eng.html
+++ b/eng/navbar_eng.html
@@ -14,9 +14,9 @@
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger text-uppercase" href="index.php">Home</a>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link js-scroll-trigger text-uppercase" href="registration.php">Registration</a>
-        </li>
+        </li> -->
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger text-uppercase" href="publications.php">Publication</a>
         </li>
